--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,37 @@
-h1 {
-  color: orange;
+/*
+==========
+fonts
+==========
+*/
+@font-face {
+  font-family: "Metropolis";
+  src: url(../fonts/Metropolis-Regular.otf);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Metropolis";
+  src: url(../fonts/Metropolis-SemiBold.otf);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Metropolis";
+  src: url(../fonts/Metropolis-Bold.otf);
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Metropolis";
+  src: url(../fonts/Metropolis-Black.otf);
+  font-weight: 900;
+}
+/*
+============
+Global Style
+============
+*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /*# sourceMappingURL=style.css.map */
