--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@ Global Style
   font-family: "Metropolis";
 }
 
+button {
+  border: none;
+  background: none;
+}
+
 li {
   list-style-type: none;
 }
@@ -49,7 +54,7 @@ h2,
 h3,
 h4,
 h5 {
-  color: black;
+  color: #000000;
   font-weight: 700;
 }
 
@@ -60,6 +65,7 @@ h1 {
 
 h2 {
   font-size: 24px;
+  margin-bottom: 16px;
 }
 
 h5 {
@@ -81,6 +87,7 @@ h5 {
   }
   h2 {
     font-size: 28px;
+    margin-bottom: 18px;
   }
   h5 {
     font-size: 18px;
@@ -95,6 +102,7 @@ h5 {
   }
   h2 {
     font-size: 36px;
+    margin-bottom: 22px;
   }
 }
 /* 
@@ -102,6 +110,19 @@ h5 {
 Common class
 ============
 */
+.btn {
+  border: none;
+  background-color: #ed017f;
+  padding: 8px 16px;
+  border-radius: 4px;
+}
+.btn a {
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  color: #ffffff;
+}
+
 .common-pera-16 {
   font-size: 14px;
   font-weight: 400;
@@ -109,7 +130,8 @@ Common class
   line-height: 18px;
 }
 
-.common-pera-14 {
+.common-pera-14,
+a {
   font-size: 13px;
   color: #999999;
   font-weight: 400;
@@ -117,22 +139,255 @@ Common class
 }
 
 @media only screen and (min-width: 768px) {
+  .btn {
+    border: none;
+    background-color: #ed017f;
+    padding: 10px 18px;
+  }
+  .btn a {
+    font-size: 12px;
+  }
   .common-pera-16 {
     font-size: 15px;
     line-height: 22px;
   }
-  .common-pera-14 {
+  .common-pera-14,
+  a {
     font-size: 14px;
     line-height: 22px;
   }
 }
 @media only screen and (min-width: 1440px) {
+  .btn {
+    padding: 13px 23px;
+  }
   .common-pera-16 {
     font-size: 16px;
   }
 }
-.about-company span {
-  color: blue;
+/*
+============
+Our Services
+============
+*/
+#our-services {
+  padding: 50px 0px 65px 0px;
+  background-color: #fef9fc;
+}
+#our-services .heading-wrap {
+  text-align: center;
+}
+#our-services .card-wrap {
+  margin-top: 30px;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  row-gap: 30px;
+}
+#our-services .card-wrap .card {
+  width: 254px;
+}
+#our-services .card-wrap .card img {
+  width: 100%;
+}
+#our-services .card-wrap .card div:nth-child(2) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+#our-services .card-wrap .card div:nth-child(2) h3 {
+  font-size: 21px;
+  line-height: 35px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+#our-services .card-wrap .card div:nth-child(2) button {
+  width: 30px;
+  height: 30px;
+  background-color: #fce0ef;
+  border-radius: 50%;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+#our-services .card-wrap .card div:nth-child(2) button a {
+  color: #ed017f;
+  line-height: none;
+}
+#our-services .card-wrap #see-more {
+  background-color: #fce0ef;
+  padding: 7px 14px;
+  border-radius: 4px;
+}
+#our-services .card-wrap #see-more a {
+  line-height: none;
+  color: #ed017f;
+}
+
+@media only screen and (min-width: 768px) {
+  #our-services {
+    padding: 70px 0px 90px 0px;
+  }
+  #our-services .heading-wrap {
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  #our-services {
+    padding: 108px 0px 130px 0px;
+  }
+}
+/*
+===========
+Newsletter
+===========
+*/
+#newsletter {
+  padding: 50px 0px;
+  background-color: #fef9fc;
+}
+#newsletter .container .input-wrap {
+  display: flex;
+  flex-flow: row wrap;
+  column-gap: 5px;
+  margin-top: 20px;
+}
+#newsletter .container .input-wrap input {
+  padding: 10px 12px;
+  border: 1px solid #999999;
+  border-radius: 4px;
+  color: #999999;
+}
+#newsletter .container .input-wrap input::placeholder {
+  color: #999999;
+}
+
+@media only screen and (min-width: 768px) {
+  #newsletter {
+    padding: 70px 0px;
+  }
+  #newsletter .container {
+    text-align: center;
+  }
+  #newsletter .container p {
+    display: flex;
+    flex-flow: column wrap;
+    text-align: center;
+  }
+  #newsletter .container .input-wrap {
+    column-gap: 10px;
+    margin-top: 25px;
+    justify-content: center;
+  }
+  #newsletter .container .input-wrap input {
+    padding: 12px 15px;
+    width: 290px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  #newsletter {
+    padding: 108px 0px;
+  }
+  #newsletter .container .input-wrap {
+    margin-top: 34px;
+  }
+  #newsletter .container .input-wrap input {
+    width: 343px;
+  }
+}
+footer {
+  padding: 30px 0px 40px 0px;
+}
+footer .container {
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 25px;
+}
+footer .container h5 {
+  margin-bottom: 14px;
+}
+footer .container a {
+  color: #676767;
+}
+footer .container .about-company p {
+  display: flex;
+  flex-flow: column wrap;
+  margin-bottom: 18px;
+}
+footer .container .about-company p span {
+  color: #999999;
+}
+footer .container .about-company ul {
+  display: flex;
+  column-gap: 16px;
+}
+footer .container .about-company ul li:nth-child(1) a {
+  color: #4b7fcd;
+}
+footer .container .about-company ul li:nth-child(3) a {
+  color: #4a71fb;
+}
+footer .container .about-company ul li:nth-child(2) a,
+footer .container .about-company ul :nth-child(4) a {
+  color: #ed017f;
+}
+footer .container .list-wrap {
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 6px;
+}
+footer .container .phone span:nth-child(1) {
+  color: #ed017f;
+}
+footer .container .phone span:nth-child(2) {
+  font-weight: bold;
+  color: #000000;
+}
+
+@media only screen and (min-width: 768px) {
+  footer {
+    padding: 40px 0px 55px 0px;
+  }
+  footer .container {
+    flex-flow: row wrap;
+    column-gap: 83px;
+    row-gap: 40px;
+  }
+  footer .container h5 {
+    margin-bottom: 16px;
+  }
+  footer .container .about-company p {
+    margin-bottom: 20px;
+  }
+  footer .container .about-company ul li {
+    column-gap: 20px;
+  }
+  footer .container .list-wrap {
+    row-gap: 7px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  footer {
+    padding: 60px 0px 80px 0px;
+  }
+  footer .container {
+    column-gap: 97px;
+  }
+  footer .container h5 {
+    margin-bottom: 20px;
+  }
+  footer .container .about-company p {
+    margin-bottom: 24px;
+  }
+  footer .container .about-company ul li {
+    column-gap: 24px;
+  }
+  footer .container .list-wrap {
+    row-gap: 10px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
