--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ fonts
   src: url(../fonts/Metropolis-Black.otf);
   font-weight: 900;
 }
-/* Mixin */
 /*
 ============
 Global Style
@@ -165,6 +164,11 @@ a {
     font-size: 16px;
   }
 }
+/*
+==========
+Header
+==========
+*/
 header {
   height: 100vh;
 }
@@ -305,6 +309,11 @@ Busness Partner
     padding: 70px 0px;
   }
 }
+/*
+============
+Our Services
+============
+*/
 #our-services {
   padding: 50px 0px 65px 0px;
   background-color: #fef9fc;
@@ -389,6 +398,92 @@ Busness Partner
 }
 /*
 ===========
+Best Result
+===========
+*/
+#best-result {
+  padding: 50px 0px;
+}
+#best-result .heading-wrap {
+  text-align: center;
+}
+#best-result .card-wrap {
+  margin-top: 40px;
+  min-height: 110px;
+  max-height: 110px;
+  max-width: 280px;
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+  padding: 0px 10px;
+  overflow-x: auto;
+}
+#best-result .card-wrap .card {
+  text-align: start;
+  max-width: 150px;
+  min-width: 150px;
+}
+#best-result .card-wrap .card h3 {
+  margin-bottom: 6px;
+  font-size: 24px;
+  font-weight: 700;
+}
+#best-result .card-wrap .card p {
+  text-transform: uppercase;
+}
+#best-result .card-wrap .card:first-child h3 {
+  color: #ed017f;
+}
+
+@media only screen and (min-width: 768px) {
+  #best-result {
+    padding: 70px 0px;
+  }
+  #best-result .heading-wrap p {
+    display: flex;
+    flex-flow: column wrap;
+  }
+  #best-result .card-wrap {
+    margin-top: 60px;
+    min-height: initial;
+    max-height: initial;
+    max-width: 100%;
+    flex-flow: row wrap;
+    align-items: start;
+    column-gap: 85px;
+    row-gap: 30px;
+    padding: 0px 0px;
+    overflow-x: initial;
+  }
+  #best-result .card-wrap .card {
+    max-width: 150px;
+    min-width: 150px;
+  }
+  #best-result .card-wrap .card h3 {
+    margin-bottom: 10px;
+    font-size: 30px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  #best-result {
+    padding: 108px 0px;
+  }
+  #best-result .card-wrap {
+    margin-top: 84px;
+    column-gap: 160px;
+    row-gap: 55px;
+  }
+  #best-result .card-wrap .card {
+    text-align: start;
+    max-width: 172px;
+    min-width: initial;
+  }
+  #best-result .card-wrap .card h3 {
+    font-size: 40px;
+  }
+}
+/*
+===========
 Newsletter
 ===========
 */
@@ -445,6 +540,11 @@ Newsletter
     width: 343px;
   }
 }
+/*
+==========
+Footer
+==========
+*/
 footer {
   padding: 30px 0px 40px 0px;
 }
