--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,76 @@ Busness Partner
   }
 }
 /*
+==========
+Glance
+==========
+*/
+#glance {
+  padding: 30px 0px;
+  display: flex;
+  flex-flow: column wrap;
+  row-gap: 30px;
+  align-items: center;
+}
+#glance .glance-img-wrap {
+  max-width: 270px;
+}
+#glance .glance-img-wrap img {
+  width: 100%;
+}
+#glance .glance-content {
+  max-width: 290px;
+  text-align: start;
+}
+#glance .glance-content p {
+  margin-bottom: 20px;
+}
+#glance .glance-content a {
+  font-size: 15px;
+  text-transform: capitalize;
+  color: #ed017f;
+}
+
+@media only screen and (min-width: 768px) {
+  #glance {
+    padding: 0px 0px;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: start;
+    column-gap: 20px;
+  }
+  #glance .glance-img-wrap {
+    max-width: 345px;
+    height: 380px;
+  }
+  #glance .glance-img-wrap img {
+    height: 100%;
+  }
+  #glance .glance-content {
+    max-width: 330px;
+  }
+  #glance .glance-content a {
+    font-size: 17px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  #glance {
+    column-gap: 110px;
+  }
+  #glance .glance-img-wrap {
+    max-width: 618px;
+    height: initial;
+  }
+  #glance .glance-content {
+    max-width: 460px;
+    font-size: 20px;
+  }
+  #glance .glance-content p {
+    line-height: 29px;
+    margin-bottom: 40px;
+  }
+}
+/*
 ============
 Our Services
 ============
