--- a/scss/style.scss
+++ b/scss/style.scss
@@ -292,3 +292,49 @@ Newsletter
 }
 
 @import "./footer";
+
+/* 
+=========== 
+Top Link 
+===========
+*/
+.top-link {
+  font-size: 1.25rem;
+  position: fixed;
+  bottom: 1.5rem;
+  right: 1.5rem;
+  background: $violet;
+  width: 2rem;
+  height: 2rem;
+  display: grid;
+  place-items: center;
+  border-radius: 8px;
+  color: $white;
+  animation: bounce 2s ease-in-out infinite;
+  visibility: hidden;
+  z-index: -100;
+}
+/* Show Link js */
+.show-link {
+  visibility: visible;
+  z-index: 100;
+}
+
+@media only screen and (min-width: 768px) {
+  .top-link {
+    bottom: 3rem;
+    right: 3rem;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
